tests/typing/fail/attr_eigen_fail1.rb

class A
  class << self
    attr :ro
    attr(:rw,true)
  end
  @ro = 3
  @rw = "blah"
end

A.ro.blah
A.rw = "hi"
A.rw.concat " world"
